--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Loremipsun.net</title>
-  <link href="style.css" rel="stylesheet">
-  <script src="script.js" defer></script>
+  <link href="./style.css" rel="stylesheet">
+  <script src="./script.js" defer></script>
 </head>
 <body>
   <header class="header">
@@ -123,7 +123,7 @@
 
         <form action="#" class="order__form form">
           <fieldset class="form__fieldset">
-            <div type="text" name="select" class="input__select form__input">
+            <div class="input__select form__input">
               <p class="input__select-title">Выберите тип системы</p>
               <img class="form__img" src="./img/form_arrow.svg" alt="icon">
 
@@ -180,7 +180,7 @@
   
           </div>
           <button class="prev-button" aria-label="Посмотреть предыдущий слайд">&lt;</button>
-          <button class="next-button" aria-label="Посмотреть следующий слайд">&gt</button>
+          <button class="next-button" aria-label="Посмотреть следующий слайд">&gt;</button>
         </div>
       </div>
     </section>
